--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "dts lint"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
