--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "analyze": "size-limit --why",
     "build": "dts build",
     "build-storybook": "storybook build",
-    "lint": "eslint",
+    "lint": "eslint ./src",
     "prepare": "dts build",
     "size": "size-limit",
     "start": "dts watch",
@@ -59,6 +59,7 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.24.4",
+    "@eslint/js": "^9.1.1",
     "@size-limit/preset-small-lib": "^11.1.2",
     "@storybook/addon-essentials": "^8.1.0-alpha.7",
     "@storybook/addon-info": "^6.0.0-alpha.2",
@@ -72,6 +73,9 @@
     "@types/react-dom": "^18.2.25",
     "babel-loader": "^9.1.3",
     "dts-cli": "^2.0.4",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "globals": "^15.0.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "react": "^18.2.0",
@@ -81,6 +85,7 @@
     "storybook": "^8.1.0-alpha.7",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^7.7.0",
     "vite": "^5.2.8"
   }
 }
