--- a/package.json
+++ b/package.json
@@ -88,5 +88,8 @@
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.7.0",
     "vite": "^5.2.8"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.11.4"
   }
 }
