--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,5 @@
     "jsx": "react-jsx",
     "jsxImportSource": "@emotion/react"
   },
-  "include": [
-    "src",
-    "types"
-  ]
+  "include": ["src", "types"]
 }
