configure formatting of ts and tsx files

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build-storybook": "storybook build",
     "husky": "husky",
     "lint": "eslint ./src",
-    "prettier": "prettier --write .",
+    "prettier": "prettier --write \"**/*.ts\" \"**/*.tsx\"",
     "prepare": "dts build",
     "size": "size-limit",
     "start": "dts watch",
