--- a/package.json
+++ b/package.json
@@ -47,12 +47,12 @@
     "@babel/core": "^7.24.4",
     "@eslint/js": "^9.1.1",
     "@size-limit/preset-small-lib": "^11.1.2",
-    "@storybook/addon-essentials": "^8.1.0-alpha.7",
+    "@storybook/addon-essentials": "^8.1.2",
     "@storybook/addon-info": "^6.0.0-alpha.2",
-    "@storybook/addon-links": "^8.1.0-alpha.7",
+    "@storybook/addon-links": "^8.1.2",
     "@storybook/addons": "^7.6.0-beta.2",
-    "@storybook/react": "^8.1.0-alpha.7",
-    "@storybook/react-vite": "^8.1.0-alpha.7",
+    "@storybook/react": "^8.1.2",
+    "@storybook/react-vite": "^8.1.2",
     "@tsconfig/recommended": "^1.0.6",
     "@tsconfig/vite-react": "^3.0.2",
     "@types/react": "^18.2.78",
@@ -68,14 +68,14 @@
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "size-limit": "^11.1.2",
-    "storybook": "^8.1.0-alpha.7",
+    "storybook": "^8.1.2",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.7.0",
-    "vite": "^5.2.8"
+    "vite": "^5.2.8",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4"
-
   }
 }
