--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.4",
     "@eslint/js": "^9.1.1",
+    "@faker-js/faker": "^8.4.1",
     "@size-limit/preset-small-lib": "^11.1.2",
     "@storybook/addon-essentials": "^8.1.2",
     "@storybook/addon-info": "^6.0.0-alpha.2",
