--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,13 +13,13 @@
     "paths": {
       "@KUI-types": [ "common/types" ],
       "@KUI-utils": [ "common/utils" ],
-      "@KUI/styles": [ "common/styles" ],
+      "@KUI-styles": [ "common/styles" ],
       "@KUI-element": [ "element" ],
       "@KUI-icons": [ "icons" ],
       "@KUI-form": [ "form" ],
       "@KUI-dashboard": [ "dashboard" ],
     }
   },
-  "include": [ "src", "types" ],
+  "include": [ "src", "types", "stories" ],
   "exclude": [ "node_modules", "**/*.spec.ts" ]
 }
