--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@storybook/react-vite": "^8.1.2",
     "@tsconfig/recommended": "^1.0.6",
     "@tsconfig/vite-react": "^3.0.2",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.2.78",
     "@types/react-dom": "^18.2.25",
     "babel-loader": "^9.1.3",
