--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "build": "dts build",
     "build-storybook": "storybook build",
     "husky": "husky",
-    "lint": "eslint ./src",
-    "prettier": "prettier --write ./**/*.tsx ./**/*.ts",
+    "lint": "eslint ./src ./stories",
+    "prettier": "prettier --write ./src/**/*.{ts,tsx} ./stories/**/*.{ts,tsx}",
     "prepare": "dts build",
     "size": "size-limit",
     "start": "dts watch",
