--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
   "extends": "@tsconfig/vite-react/tsconfig.json",
   "compilerOptions": {
+    "rootDirs": [ "src", "types", "stories", "test" ],
+    "outDir": "./dir",
     "module": "ESNext",
     "moduleResolution": "node",
     "esModuleInterop": true,
@@ -20,6 +22,6 @@
       "@KUI-dashboard": [ "dashboard" ]
     }
   },
-  "include": [ "src", "types", "stories", "test" ],
+  "include": [ "src", "types", ],
   "exclude": [ "node_modules", "**/*.spec.ts" ]
 }
