--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "build-storybook": "storybook build",
     "husky": "husky",
     "lint": "eslint ./src ./stories",
+    "lint-staged": "lint-staged",
     "format": "prettier --write ./src/**/*.{ts,tsx} ./stories/**/*.{ts,tsx}",
     "prepare": "dts build",
     "size": "size-limit",
     "start": "dts watch",
     "storybook": "storybook dev -p 6006",
     "test": "dts test --passWithNoTests"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": "prettier --write"
   },
   "jest": {
     "testEnvironment": "jsdom"
