--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   ],
   "scripts": {
     "analyze": "size-limit --why",
-    "build": "dts build",
+    "clean": "rimraf dist",
+    "build": "pnpm clean && npx rollup -c --bundleConfigAsCjs",
     "build-storybook": "storybook build",
     "husky": "husky",
     "lint": "eslint ./src ./stories",
@@ -32,7 +33,10 @@
     "test": "dts test --passWithNoTests"
   },
   "lint-staged": {
-    "*.{ts,tsx}": [ "prettier --write", "eslint" ]
+    "*.{ts,tsx}": [
+      "prettier --write",
+      "eslint"
+    ]
   },
   "jest": {
     "testEnvironment": "jsdom"
@@ -57,6 +61,10 @@
     "@babel/core": "^7.24.4",
     "@eslint/js": "^9.1.1",
     "@faker-js/faker": "^8.4.1",
+    "@rollup/plugin-alias": "^5.1.0",
+    "@rollup/plugin-commonjs": "^25.0.8",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@size-limit/preset-small-lib": "^11.1.2",
     "@storybook/addon-essentials": "^8.1.2",
     "@storybook/addon-info": "^6.0.0-alpha.2",
@@ -79,6 +87,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
+    "rimraf": "^5.0.7",
+    "rollup": "^4.18.0",
     "size-limit": "^11.1.2",
     "storybook": "^8.1.2",
     "tslib": "^2.6.2",
