--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
   "extends": "@tsconfig/vite-react/tsconfig.json",
   "compilerOptions": {
-    "rootDirs": [ "src", "types", "stories", "test" ],
+    "rootDirs": [ "src", "types" ],
     "outDir": "./dir",
     "module": "ESNext",
     "moduleResolution": "node",
@@ -22,6 +22,6 @@
       "@KUI-dashboard": [ "dashboard" ]
     }
   },
-  "include": [ "src", "types", ],
+  "include": [ "src", "types", "stories" ],
   "exclude": [ "node_modules", "**/*.spec.ts" ]
 }
