--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@storybook/addons": "^7.6.0-beta.2",
     "@storybook/react": "^8.1.2",
     "@storybook/react-vite": "^8.1.2",
+    "@testing-library/react": "^15.0.7",
     "@tsconfig/recommended": "^1.0.6",
     "@tsconfig/vite-react": "^3.0.2",
     "@types/jest": "^29.5.12",
