--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,20 +12,20 @@
     "jsx": "react-jsx",
     "jsxImportSource": "@emotion/react",
     "baseUrl": "./src",
-    // "paths": {
-    //   "@KUI-types": [ "common/types" ],
-    //   "@KUI-utils": [ "common/utils" ],
-    //   "@KUI-styles": [ "common/styles" ],
-    //   "@KUI-element": [ "element" ],
-    //   "@KUI-icons": [ "icons" ],
-    //   "@KUI-form": [ "form" ],
-    //   "@KUI-dashboard": [ "dashboard" ]
-    // },
+    "paths": {
+      "@KUI-types": [ "common/types" ],
+      "@KUI-utils": [ "common/utils" ],
+      "@KUI-styles": [ "common/styles" ],
+      "@KUI-element": [ "element" ],
+      "@KUI-icons": [ "icons" ],
+      "@KUI-form": [ "form" ],
+      "@KUI-dashboard": [ "dashboard" ]
+    },
     "resolveJsonModule": true,
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": [ "src", "stories" ],
-  "exclude": [ "node_modules", "**/*.spec.ts", "test", "dist" ]
+  "include": [ "stories", "test" ],
+  "exclude": [ "node_modules", "**/*.spec.ts", "src", "dist" ]
 }
