--- a/package.json
+++ b/package.json
@@ -30,16 +30,13 @@
     "size": "size-limit",
     "start": "dts watch",
     "storybook": "storybook dev -p 6006",
-    "test": "dts test --passWithNoTests"
+    "test": "jest"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
       "prettier --write",
       "eslint"
     ]
-  },
-  "jest": {
-    "testEnvironment": "jsdom"
   },
   "peerDependencies": {
     "react": ">=16"
@@ -58,7 +55,10 @@
     }
   ],
   "devDependencies": {
-    "@babel/core": "^7.24.4",
+    "@babel/core": "^7.24.6",
+    "@babel/preset-env": "^7.24.6",
+    "@babel/preset-react": "^7.24.6",
+    "@babel/preset-typescript": "^7.24.6",
     "@eslint/js": "^9.1.1",
     "@faker-js/faker": "^8.4.1",
     "@size-limit/preset-small-lib": "^11.1.2",
@@ -74,12 +74,14 @@
     "@types/jest": "^29.5.12",
     "@types/react": "^18.2.78",
     "@types/react-dom": "^18.2.25",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "dts-cli": "^2.0.4",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "globals": "^15.0.0",
     "husky": "^9.0.11",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
