--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "main": "dist/index.js",
   "module": "dist/kheiron-ui.esm.js",
   "typings": "dist/index.d.ts",
-  "type": "module",
   "files": [
     "dist"
   ],
@@ -59,7 +58,8 @@
     "@babel/preset-env": "^7.24.6",
     "@babel/preset-react": "^7.24.6",
     "@babel/preset-typescript": "^7.24.6",
-    "@eslint/js": "^9.1.1",
+    "@eslint/compat": "^1.0.3",
+    "@eslint/js": "^9.3.0",
     "@faker-js/faker": "^8.4.1",
     "@size-limit/preset-small-lib": "^11.1.2",
     "@storybook/addon-essentials": "^8.1.2",
@@ -77,9 +77,9 @@
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "dts-cli": "^2.0.4",
-    "eslint": "^8.57.0",
+    "eslint": "^9.4.0",
     "eslint-plugin-react": "^7.34.1",
-    "globals": "^15.0.0",
+    "globals": "^15.3.0",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
@@ -90,7 +90,7 @@
     "storybook": "^8.1.2",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^7.7.0",
+    "typescript-eslint": "^7.11.0",
     "vite": "^5.2.8",
     "vite-tsconfig-paths": "^4.3.2"
   },
