--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "analyze": "size-limit --why",
     "build": "dts build",
     "build-storybook": "storybook build",
-    "format": "prettier --write ./src/**/*.{ts,tsx} ./stories/**/*.{ts,tsx}",
+    "format": "prettier --write ./src/**/*.{ts,tsx} ./stories/**/*.{ts,tsx} ./test/**/*.{ts,tsx}",
     "husky": "husky",
     "lint": "eslint ./src ./stories ./test",
     "lint-staged": "lint-staged",
@@ -33,8 +33,10 @@
   },
   "lint-staged": {
     "*.{ts,tsx}": [
-      "prettier --write",
       "eslint"
+    ],
+    "*": [
+      "prettier --write --ignore-unknown"
     ]
   },
   "peerDependencies": {
