--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "@storybook/addon-info": "^6.0.0-alpha.2",
     "@storybook/addon-links": "^8.1.2",
     "@storybook/addons": "^7.6.0-beta.2",
-    "@storybook/react": "^8.1.2",
+    "@storybook/react": "^8.1.4",
     "@storybook/react-vite": "^8.1.2",
     "@testing-library/react": "^15.0.7",
     "@tsconfig/recommended": "^1.0.6",
@@ -97,6 +97,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "styled-components": "^6.1.11"
   }
 }
