fix input fields

--- a/example/package.json
+++ b/example/package.json
@@ -9,8 +9,11 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
     "react-app-polyfill": "^3.0.0",
-    "styled-components": "^6.1.8"
+    "react-hook-form": "^7.52.0",
+    "styled-components": "^6.1.8",
+    "zod": "^3.23.8"
   },
   "alias": {
     "react": "../node_modules/react",
